--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>iran,tehran</p>
+                  <p>Tehran Province, Tehran, Iran</p>
                 </div>
               </div><!-- End Info Item -->
 
