--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Sahand Savadi</h2>
-        <p>I'm <span class="typed" data-typed-items="angular, node.js, react.js, next.js,.netcore">angular</span><span
+        <p>I'm <span class="typed" data-typed-items="figma Designer, Back End developer, FrontEnd developer,">Designer</span><span
             class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span
             class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
